# FLAW

./: .gitignore  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  action.yml  package-lock.json  package.json
.github/workflows/: flaw.yml
action-scripts/: parse-results.js
python/: README.md  pyproject.toml
python/flaw_audit/: __init__.py  cli.py
rulepacks/: categories.json  severity-map.json  smell-signatures.json
rulepacks/frameworks/: express-prisma.json  fastapi.json  nextjs.json
schemas/: audit-report.schema.json
scripts/: build-pypi.sh
src/: index.ts
src/analyzers/: backend-integrity.ts  base.ts  cross-wiring.ts  data-model.ts  deployment.ts  error-handling.ts  feature-reality.ts  frameworks.ts  frontend-wiring.ts  health-surface.ts  integration-flow.ts  maintainability.ts  security-auth.ts  smell-fingerprint.ts  smells.ts  spec-reality.ts  testing.ts  validation.ts  wiring.ts
src/engine/: badge.ts  baseline.ts  dep-graph.ts  explain.ts  fix-reporter.ts  github-reporter.ts  html-reporter.ts  ignore.ts  integrity.ts  pre-commit.ts  promise-reality.ts  prompt-reporter.ts  purpose-plan.ts  repl.ts  reporter.ts  roadmap.ts  rules-generator.ts  scanner.ts  scorer.ts  symptoms.ts  telemetry-types.ts  telemetry.ts  triage.ts  watcher.ts
src/types/: index.ts
src/utils/: colors.ts  fs.ts  git.ts  patterns.ts
tests/helpers/: make-context.ts
tests/integration/: full-scan.test.ts
vscode-extension/: .vscodeignore  README.md  esbuild.config.mjs  package.json
vscode-extension/src/: analyzer.ts  (+8 more)
(+18 files in other folders)
