[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flaw-kit"
version = "2.2.0"
description = "FLAW — Flow Logic Audit Watch. Code auditor for AI-generated projects."
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.8"
authors = [
    {name = "resetroot99"},
    {name = "ajakvani"},
]
keywords = ["audit", "code-quality", "ai-code-review", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/resetroot99/FLAW"
Repository = "https://github.com/resetroot99/FLAW"
Issues = "https://github.com/resetroot99/FLAW/issues"

[project.scripts]
flaw = "flaw_audit.cli:main"

[tool.setuptools.packages.find]
include = ["flaw_audit*"]

[tool.setuptools.package-data]
flaw_audit = ["dist/**/*.js", "dist/**/*.json"]
